--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 build/
 *.pbxuser
 !default.pbxuser
+
+# Xcode project files except for the project file
+#
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata
 xcuserdata
 *.xccheckout
 DerivedData
